# 1.02.16 (72459) Mar 9, 2013
Fixed a problem that caused items to animate to the skateboard on 'reset all'
# 1.02.15 (72457) Mar 9, 2013
Start an object on the skateboard
Added a white border around the tab title text
# 1.02.14 (72426) Mar 6, 2013
Fade out/in tab title text
# 1.02.13 (72424) Mar 6, 2013
Center the tab title between the left side of the screen and the thumbnail icons
For "icon thumbnail" tabs, moved the home button to the left of the icons.
Tabs 2-4: Removed play/pause button
# 1.02.12 (72410) Mar 4, 2013
Increased font for popup menu
# 1.02.11 (72408) Mar 4, 2013
Made the menu button larger on the homescreen, and better aligned with PhET text
Moved the home button to the right, away from the tab thumbnails
# 1.02.10 (72406) Mar 4, 2013
Switched to buttonless home/menu buttons
# 1.02.09 (72404) Mar 4, 2013
Make non-selected tab thumbnails smaller
# 1.02.08 (72402) Mar 4, 2013
Set the force to zero when releasing mouse on pusher
Fixed the slider title layout while keeping a large hit area for the knob
Made tab bar black for text tabs
Wired up the slider to pusher drags
Clamp max acceleration to 500N when dragging the pusher figure
# 1.02.07 (72394) Mar 4, 2013
Made the pusher draggable
In the tab bar with thumbnails, increased the left padding of the tab name from 10px to 15px
Made the applied force knob hit area larger (which changed the controls layout a little bit)
Made the PhET Logo non-clickable and added "PhET Homepage" to the popup menu 
# 1.02.06 (72389) Mar 4, 2013
# 1.02.05 (72381) Mar 3, 2013
# 1.02.04 (72377) Mar 1, 2013
# 1.02.03 (72374) Mar 1, 2013
Home screen improvements
# 1.02.02 (72362) Mar 1, 2013
Switched to a branch for level-selection & tab mockup development for mobile/touch devices
Re-enabled clouds for next deploy
# 1.02.01 (72256) Feb 21, 2013
Created a development version without clouds
# 1.02.00 (72090) Feb 8, 2013
> Changed the simulation speed and max object speed to make extreme forces easier to visualize