@@ -1,3 +1,5 @@
+Friction tab: Start with the fridge out, and lower friction to 1/4 so it can be moved by default
+Motion tab: Have the girl start on the skateboard
 # 1.02.16 (72459) Mar 9, 2013
 Fixed a problem that caused items to animate to the skateboard on 'reset all'
 # 1.02.15 (72457) Mar 9, 2013
